# assembly-planner

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Notes.html  Notes.md  README.md
Source/: combinator.hpp  containers.hpp  dotwriter.hpp  expander.hpp  graph.hpp  main.cpp  websocket_client.hpp
Test/: CMakeLists.txt  testing
assemblyBuilder/: amf.py  cube_group.AMF  main.py
assemblyPlanner/: .gitignore  CMakeLists.txt  assembly1.xml  hallowelt
assemblyPlanner/Lib/: CMakeLists.txt  a_star.cpp  argparse.hpp  mysqrt.cpp  tinyxml2.cpp
assemblyPlanner/Source/: aostar.hpp  astar.hpp  bfs.hpp  combinator.hpp  containers.hpp  dotwriter.hpp  edge.hpp  exec_agent.hpp  expander.hpp  franka_agent.hpp  graph.hpp  graph_generator.hpp  helpers.hpp  input_reader.hpp  main.cpp  node.hpp  planner.hpp  supervisor.hpp  task.hpp  visitor.hpp  websocket_client.hpp  websocket_sync.hpp
assemblyPlanner/Test/: CMakeLists.txt  echo_server.py  echo_server0.py  echo_server1.py  test.cpp  testing  ws_client.py  ws_test.cpp  ws_test_temp.cpp
assembly_planner/: CMakeLists.txt  package.xml
assembly_planner/include/assembly_planner/: a_star.h  andorgraph_node.h  assemblies.h  assembly_controller.h  assemblybuilder.h  assemblydata.h  astar_node.h  data_Assembly.h  database.h  math_functions.h  memory.h  objects.h  planner.h  test.hpp  thread_Agent.h
assembly_planner/src/: a_star.cpp  andorgraph_node.cpp  assemblies.cpp  assembly_controller.cpp  assemblybuilder.cpp  assemblydata.cpp  astar_node.cpp  data_Assembly.cpp  database.cpp  main.cpp  math_functions.cpp  memory.cpp  objects.cpp  planner.cpp  test.cpp  thread_Agent.cpp
example/: assembly.xml  output.xml
src/: astar.hpp  combinator.hpp  containers.hpp  dotwriter.hpp  edge.hpp  expander.hpp  graph.hpp  graph_factory.hpp  graph_generator.hpp  input_reader.hpp  io.hpp  main.cpp  node.hpp  planner.hpp  task.hpp  types.hpp  visitor.hpp
test/: echo_server2.py  mongo_test.cpp
